# Pedestrian-Line

./: .gitattributes  .gitignore  Pedestrian Line.sln  README.md  config.py  debug_onnx_inspect.py  detector.py  draw_utils.py  line_counter.py  main.py  oi.py  pedestrian-line-threat-model.md  pyproject.toml  requirements-jetson.txt  security_best_practices_report.md  tracker.py
Progress/: 2026-02-25_Wednesday_February.md  session_thursday_1_december.md
config/: README.md  line.json  line2.json  line3.json  line4.json  line5.json  overrides.example.json
docs/: README.md  TRT_backecnd2.md  annotation_workflow.md  ezviz_windows_bridge_rtsp_runbook.md  jetson_deployment_runbook.md  jetson_dual_service_runbook.md  line_direction.md  mvp_ui_runbook.md  portal_architecture.md  remote_ai_box_public_hosting_guide.md  security_review.md  single_loop_production_runbook.md  tensorrt_engine_bringup.md
pedestrian_line_counter/: __init__.py  _api_common.py  _api_helpers.py  api.py  config.py  config_io.py  detector.py  draw_utils.py  event_contract.py  event_uploader.py  line_counter.py  line_picker.py  main.py  output_writer.py  portal_contract.py  portal_uploader.py  report_writer.py  review_store.py  service.py  source_safety.py  spool_retention.py  stream_reader.py  structures.py  tensorrt_runner.py  time_utils.py  torch_detector.py  tracker.py  traffic_spool.py  ui_auth.py  videoio_utils.py
portal/: Portal.Web.csproj  Program.cs  README.md  appsettings.Local.example.json  appsettings.json
scripts/: bootstrap_jetson.sh  check_rtsp.py  dataset_qa.py  debug_onnx_inspect.py  (+12 more)
(+108 files in other folders)
