[project]
name = "pedestrian-line"
version = "0.2.0"
description = "Directional line-crossing counter for target vehicle subclasses (video/RTSP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "onnxruntime-gpu==1.20.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "pytest>=9.0.1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn>=0.30,<1",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pedestrian_line_counter*", "yolo_kitv2*"]
